[package]
name = "lidrs"
authors = ["Sam Morrell <s.a.f.morrell@exeter.ac.uk>"]
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"
description = " A rust crate for reading and representing light intensity distributions via photometric webs. "
keywords = ["ies", "ldt", "photometric", "light"]
categories = ["science", "mathematics", "parser-implementations"]
repository = "https://github.com/sammorrell/lidrs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
property = "0.3.*"
regex = "^1.6.*"
num_enum = "0.5.*"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
approx="0.5.*"
